# hub

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/2025-08-26-070612_initialize_blog_tables/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/adapters/web/: health.rs
backend/src/core/: app_error.rs  appstate.rs  docs.rs  env.rs  mod.rs
backend/src/core/domain/: health.rs
backend/src/core/ports/: health.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/ui/: background-boxes.tsx
initial-setup/: prep-work.md
traefik/: auto-tls.md
