[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
aide = { version = "0.15.1", features = [
    "axum",
    "swagger",
    "macros",
    "axum-json",
    "axum-extra",
    "axum-extra-headers",
    "axum-extra-query",
] }
schemars = { version = "0.9.0", features = ["uuid1"] }
bb8 = "0.9.0"
diesel = { version = "2.2.12", features = ["postgres", "serde_json"] }
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "compression-br",
    "compression-deflate",
] }
diesel-async = { version = "0.6.1", features = ["pool", "postgres", "bb8"] }
tracing = "0.1"
reqwest = { version = "0.12.23", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.143"
validator = "0.20.0"
