[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
aide = { version = "0.15.1", features = [
    "axum",
    "swagger",
    "macros",
    "axum-json",
    "axum-extra",
    "axum-extra-headers",
    "axum-extra-query",
] }
schemars = { version = "0.9.0", features = ["uuid1", "chrono04"] }
bb8 = "0.9.0"
diesel = { version = "2.3.3", features = ["postgres", "serde_json", "chrono"] }
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "compression-br",
    "compression-deflate",
] }
diesel-async = { version = "0.7.3", features = ["pool", "postgres", "bb8"] }
tracing = "0.1"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.143"
validator = "0.20.0"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
